Debug Some Layout Bugs Add Some Assets Add Image Lazy Loading To Product Card Component Some Important Edits Edit Product Modal Design

--- a/src/client/src/assets/sass/components/productCardComponents.sass
+++ b/src/client/src/assets/sass/components/productCardComponents.sass
@@ -3,6 +3,7 @@
   border-radius: 4px!important
 
   > .p_image
+    overflow: hidden
 
     > img
       width: 100%!important
@@ -21,6 +22,18 @@
 
       > p
         font-size: 10px!important
+
+  > .p_image.img_loading::before
+    content: ''
+    display: block
+    position: absolute
+    z-index: 5
+    left: -150px
+    top: 0
+    height: 100%
+    width: 150px
+    background: linear-gradient(to right, transparent 0%, #E8E8E8 50%, transparent 100%)
+    animation: load 1s cubic-bezier(0.4, 0.0, 0.2, 1) infinite
 
   > .content
 
@@ -62,3 +75,9 @@
 
 .productCardComponents:hover
   box-shadow: 0 3px 6px #00000029
+
+@keyframes load
+  from
+    left: -150px
+  to
+    left: 100%
